# OSS_Campus

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  _compat.py  config.py  main.py
app/agent/: agent.py  prompts.py  tools.py
app/api/: __init__.py  models.py  routes.py
app/coral/: __init__.py  runner.py  schemas.py
app/jd_parser/: parser.py
app/memory/: __init__.py  store.py
app/scorer/: __init__.py  readiness.py
coral_sources/linkedin_activity/: README.md  manifest.yaml
eval/: __init__.py  eval_runner.py  test_cases.py
frontend/: streamlit_app.py
queries/: contribution_strength.sql  gap_analysis.sql  next_contributions.sql  role_alignment.sql  trajectory.sql
tests/: __init__.py  test_agent.py  test_coral_runner.py  test_jd_parser.py  test_scorer.py
